<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/corner_radius_for_profile"
        android:layout_height="260dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_default_image_img"
            app:civ_border_color="@color/light_grey"
            app:civ_border_width="1.5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:textSize="28sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/iv_user"
            app:layout_constraintStart_toStartOf="@+id/iv_user"
            app:layout_constraintTop_toBottomOf="@+id/iv_user"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="40dp"/>

    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/light_grey"
        android:layout_marginHorizontal="28dp"
        android:layout_marginVertical="16dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="28dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/disable_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:checked="true"
            android:layout_gravity="end"
            android:layout_marginEnd="28dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_disabling_saves_traffic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disabling_saves_traffic"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:layout_marginHorizontal="28dp"/>

    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/light_grey"
        android:layout_marginHorizontal="28dp"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/tv_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_cache"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="28dp"/>

    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/light_grey"
        android:layout_marginHorizontal="28dp"
        android:layout_marginVertical="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/light_grey"
        android:layout_marginHorizontal="32dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/offer_news"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/offer_post"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"/>
        
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_about_geekmedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_geekmedia"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="140dp"
        android:gravity="bottom|center"/>

</LinearLayout>