<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.favorites_news.FavoritesNewsFragment">

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites_ru"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/tv_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_ru"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="12dp"
        app:layout_goneMarginTop="12dp"/>

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_for_saved_news_ru"
        android:iconifiedByDefault="true"
        android:layout_marginTop="16dp"
        android:background="@color/very_light_grey"
        android:layout_marginHorizontal="12dp"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="12dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_liked_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_favorite_news"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ImageView
        android:id="@+id/iv_favorites"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/favorites_news_img"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="12dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_no_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_dont_have_saved_news"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:minLines="2"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:visibility="gone"/>

</LinearLayout>