<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.settings.SettingsFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_top_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="28dp"
            android:layout_marginVertical="8dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/lora"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"/>

        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/light_grey"
            android:layout_marginVertical="16dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/disable_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:checked="true"
                android:layout_gravity="end"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_disabling_saves_traffic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disabling_saves_traffic"
            android:textSize="12sp"
            android:textColor="@color/grey" />

        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/light_grey"
            android:layout_marginVertical="16dp"/>

        <TextView
            android:id="@+id/tv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/light_grey"
            android:layout_marginVertical="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_offer_news"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:backgroundTint="@color/light_grey"
            android:layout_marginHorizontal="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/offer_news"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"/>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/offer_post"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



</LinearLayout>