<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.post.PostFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_top_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_back_to_home" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/like_img" />

        <ImageView
            android:id="@+id/iv_liked"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/liked_img"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_top_part" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_created_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/_01_01_2023"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="12dp"
                android:text="@string/news_ru"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/iv_post_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>