<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_post"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/iv_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/orange"/>

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_gravity="end"
            android:layout_marginEnd="72dp"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorites_icon"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/iv_liked"
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_liked"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:background="@drawable/corner_radius_for_category_news"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/autour_one"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_gravity="bottom"
            android:background="@color/transparent_black_50">


            <TextView
                android:id="@+id/tv_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_01_01_2023"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="@font/lora"
                android:gravity="center"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"/>


            <TextView
                android:id="@+id/tv_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/lora"
                android:maxLines="4"
                android:text="@string/news_ru"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                tools:text="@tools:sample/lorem/random"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>